# hsmecab

./: .gitignore  mecab.cabal  mecab2.cabal  stack.yaml
